--- a/style.css
+++ b/style.css
@@ -39,7 +39,16 @@ body {
   flex-direction: column;
 }
 .grid-container {
-  height: 100%;
+  height: 499px;
+  width: 499px;
   background-color: black;
   border: 2rem solid rgb(15, 15, 15);
+  display: grid;
+  grid-template-columns: repeat(16, 1fr);
+  grid-template-rows: repeat(16, 1fr);
+}
+.cell {
+  box-sizing: border-box;
+  background-color: aliceblue;
+  border: 1px solid gray;
 }
